--- a/Savio/CancelSavingPlan/SACancelSavingViewController.xib
+++ b/Savio/CancelSavingPlan/SACancelSavingViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -21,9 +21,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SACancelSavingViewController" customModule="Savio" customModuleProvider="target">
             <connections>
+                <outlet property="cancelDetailLabel" destination="mCS-zF-Ar6" id="hsI-kd-Mfw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view1" destination="unf-fN-0ho" id="tbH-Qt-OPQ"/>
                 <outlet property="view2" destination="aid-gQ-1Sd" id="5bl-vI-XO5"/>
+                <outlet property="wouldYouLikeToStartNewSavingPlanLabel" destination="msI-DK-VFj" id="xX8-em-Lbd"/>
+                <outlet property="yourMoneyWillBeReturnLabel" destination="gxF-m4-mN9" id="dlW-N6-lNE"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -35,7 +38,7 @@
                     <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancel savings plan" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6DX-40-yym">
-                            <rect key="frame" x="183" y="65" width="235" height="73"/>
+                            <rect key="frame" x="183" y="36" width="235" height="73"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="73" id="8Wh-84-Tfq"/>
                                 <constraint firstAttribute="width" constant="235" id="YlC-Rx-EBu"/>
@@ -44,7 +47,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Are you sure you want to cancel your savings plan?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5v-1W-cps">
-                            <rect key="frame" x="10" y="189" width="580" height="50"/>
+                            <rect key="frame" x="10" y="160" width="580" height="50"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="UC1-nH-DAR"/>
                             </constraints>
@@ -53,16 +56,16 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cancelling your savings plan will withdraw any money you have saved from Savio back into your account." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCS-zF-Ar6">
-                            <rect key="frame" x="10" y="270" width="580" height="54"/>
+                            <rect key="frame" x="10" y="241" width="580" height="80"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="54" id="eMy-IQ-a6e"/>
+                                <constraint firstAttribute="height" constant="80" id="eMy-IQ-a6e"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="GothamRounded-Book" family="Gotham Rounded" pointSize="15"/>
                             <color key="textColor" red="0.31764705879999999" green="0.3294117647" blue="0.36470588240000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6xR-Rh-zL7">
-                            <rect key="frame" x="30" y="384" width="540" height="43"/>
+                            <rect key="frame" x="30" y="381" width="540" height="43"/>
                             <color key="backgroundColor" red="0.94117647059999998" green="0.64313725489999995" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="43" id="WAZ-94-B0q"/>
@@ -74,7 +77,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LRn-fe-sQ4">
-                            <rect key="frame" x="30" y="384" width="540" height="40"/>
+                            <rect key="frame" x="30" y="381" width="540" height="40"/>
                             <color key="backgroundColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="XcI-He-jeP"/>
@@ -91,7 +94,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iZU-gg-UaE">
-                            <rect key="frame" x="10" y="460" width="580" height="30"/>
+                            <rect key="frame" x="10" y="444" width="580" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="LxN-oC-p4z"/>
                             </constraints>
@@ -114,7 +117,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="LRn-fe-sQ4" secondAttribute="trailing" constant="30" id="262-SG-JJb"/>
-                        <constraint firstItem="6DX-40-yym" firstAttribute="top" secondItem="unf-fN-0ho" secondAttribute="top" constant="65" id="CMB-Qc-5DC"/>
+                        <constraint firstItem="6DX-40-yym" firstAttribute="top" secondItem="unf-fN-0ho" secondAttribute="top" constant="36" id="CMB-Qc-5DC"/>
                         <constraint firstAttribute="trailing" secondItem="mCS-zF-Ar6" secondAttribute="trailing" constant="10" id="DGN-da-KZi"/>
                         <constraint firstItem="g5v-1W-cps" firstAttribute="leading" secondItem="unf-fN-0ho" secondAttribute="leading" constant="10" id="FBG-ho-KD7"/>
                         <constraint firstAttribute="trailing" secondItem="g5v-1W-cps" secondAttribute="trailing" constant="125" id="Fsm-X7-O1l"/>
@@ -123,7 +126,7 @@
                         <constraint firstItem="iZU-gg-UaE" firstAttribute="leading" secondItem="unf-fN-0ho" secondAttribute="leading" constant="10" id="UHC-lL-H08"/>
                         <constraint firstAttribute="trailing" secondItem="iZU-gg-UaE" secondAttribute="trailing" constant="10" id="WfN-b1-eIT"/>
                         <constraint firstItem="LRn-fe-sQ4" firstAttribute="leading" secondItem="unf-fN-0ho" secondAttribute="leading" constant="30" id="XIF-Je-4as"/>
-                        <constraint firstItem="iZU-gg-UaE" firstAttribute="top" secondItem="LRn-fe-sQ4" secondAttribute="bottom" constant="36" id="Z11-2w-xKR"/>
+                        <constraint firstItem="iZU-gg-UaE" firstAttribute="top" secondItem="LRn-fe-sQ4" secondAttribute="bottom" constant="23" id="Z11-2w-xKR"/>
                         <constraint firstItem="mCS-zF-Ar6" firstAttribute="leading" secondItem="unf-fN-0ho" secondAttribute="leading" constant="10" id="fXA-cI-6dj"/>
                         <constraint firstItem="mCS-zF-Ar6" firstAttribute="top" secondItem="g5v-1W-cps" secondAttribute="bottom" constant="31" id="fvs-lg-BH0"/>
                         <constraint firstAttribute="trailing" secondItem="g5v-1W-cps" secondAttribute="trailing" constant="10" id="hUp-8c-h01"/>
@@ -148,7 +151,7 @@
                     <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your savings      plan has been canceled" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHp-XT-doJ">
-                            <rect key="frame" x="150" y="65" width="300" height="100"/>
+                            <rect key="frame" x="150" y="32" width="300" height="100"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="lLC-on-afh"/>
                                 <constraint firstAttribute="width" constant="300" id="nkM-wC-32d"/>
@@ -157,7 +160,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your money will returned to your bank in the next 5-10 working days" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gxF-m4-mN9">
-                            <rect key="frame" x="30" y="197" width="540" height="40"/>
+                            <rect key="frame" x="30" y="142" width="540" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="450" id="qZe-ls-FiL"/>
                                 <constraint firstAttribute="height" constant="40" id="td4-P7-nIz"/>
@@ -172,7 +175,7 @@
                             </variation>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Would you like to start a new saving plan?" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="msI-DK-VFj">
-                            <rect key="frame" x="150" y="327" width="300" height="40"/>
+                            <rect key="frame" x="150" y="272" width="300" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="4tc-IA-Ejh"/>
                                 <constraint firstAttribute="width" constant="300" id="VPE-3T-2Ry"/>
@@ -182,7 +185,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DLv-21-PrS">
-                            <rect key="frame" x="30" y="415" width="540" height="45"/>
+                            <rect key="frame" x="30" y="360" width="540" height="45"/>
                             <color key="backgroundColor" red="0.94117647058823528" green="0.64313725490196072" blue="0.22352941176470587" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="45" id="JUh-a9-ih9"/>
@@ -194,7 +197,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lKj-8R-VCW">
-                            <rect key="frame" x="30" y="415" width="540" height="40"/>
+                            <rect key="frame" x="30" y="360" width="540" height="40"/>
                             <color key="backgroundColor" red="0.95686274510000002" green="0.69019607839999997" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="ZHQ-h6-R4H"/>
@@ -220,11 +223,11 @@
                         <constraint firstItem="jHp-XT-doJ" firstAttribute="centerX" secondItem="aid-gQ-1Sd" secondAttribute="centerX" id="Mg6-dR-Vf6"/>
                         <constraint firstItem="DLv-21-PrS" firstAttribute="top" secondItem="msI-DK-VFj" secondAttribute="bottom" constant="48" id="N1c-ek-4lc"/>
                         <constraint firstAttribute="trailing" secondItem="DLv-21-PrS" secondAttribute="trailing" constant="30" id="NaS-Zt-AU4"/>
-                        <constraint firstItem="gxF-m4-mN9" firstAttribute="top" secondItem="jHp-XT-doJ" secondAttribute="bottom" constant="32" id="QB1-Ar-IvF"/>
+                        <constraint firstItem="gxF-m4-mN9" firstAttribute="top" secondItem="jHp-XT-doJ" secondAttribute="bottom" constant="10" id="QB1-Ar-IvF"/>
                         <constraint firstAttribute="trailing" secondItem="gxF-m4-mN9" secondAttribute="trailing" constant="30" id="VXI-aY-Ryk"/>
                         <constraint firstItem="lKj-8R-VCW" firstAttribute="centerX" secondItem="aid-gQ-1Sd" secondAttribute="centerX" id="Ybv-Vk-HWp"/>
                         <constraint firstAttribute="trailing" secondItem="lKj-8R-VCW" secondAttribute="trailing" constant="30" id="dMX-ag-lUg"/>
-                        <constraint firstItem="jHp-XT-doJ" firstAttribute="top" secondItem="aid-gQ-1Sd" secondAttribute="top" constant="65" id="dax-Mb-zNA"/>
+                        <constraint firstItem="jHp-XT-doJ" firstAttribute="top" secondItem="aid-gQ-1Sd" secondAttribute="top" constant="32" id="dax-Mb-zNA"/>
                         <constraint firstItem="lKj-8R-VCW" firstAttribute="top" secondItem="msI-DK-VFj" secondAttribute="bottom" constant="48" id="lpF-Uk-Mmo"/>
                         <constraint firstItem="gxF-m4-mN9" firstAttribute="centerX" secondItem="aid-gQ-1Sd" secondAttribute="centerX" id="nRt-zZ-40g"/>
                         <constraint firstItem="gxF-m4-mN9" firstAttribute="leading" secondItem="aid-gQ-1Sd" secondAttribute="leading" constant="30" id="vhM-Xj-4EW"/>
