--- a/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
+++ b/Savio/SACreateSavingPlanViewController/SavingCategoryTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -31,7 +31,7 @@
                         <color key="textColor" red="0.67450980392156867" green="0.67450980392156867" blue="0.68235294117647061" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="saving-cate.png" translatesAutoresizingMaskIntoConstraints="NO" id="aOo-vc-KOf">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aOo-vc-KOf">
                         <rect key="frame" x="20" y="16" width="47" height="47"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="aOo-vc-KOf" secondAttribute="height" multiplier="1:1" id="FFB-mK-VzR"/>
@@ -69,7 +69,4 @@
             <point key="canvasLocation" x="424" y="248"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="saving-cate.png" width="231" height="129"/>
-    </resources>
 </document>
