--- a/Savio/SavingPlanSetup/SACreateGroupSavingPlanViewController.xib
+++ b/Savio/SavingPlanSetup/SACreateGroupSavingPlanViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -42,6 +42,9 @@
                                         <constraint firstAttribute="width" constant="51" id="sve-zM-VgT"/>
                                     </constraints>
                                     <state key="normal" title="Button" image="generic-camera.png"/>
+                                    <connections>
+                                        <action selector="cameraButtonPressed:" destination="-1" eventType="touchUpInside" id="JkR-Fe-T38"/>
+                                    </connections>
                                 </button>
                                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a photo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gvq-sT-fx5">
                                     <rect key="frame" x="267" y="123" width="65" height="10"/>
@@ -111,6 +114,7 @@
                 <constraint firstAttribute="trailing" secondItem="xVg-wV-axv" secondAttribute="trailing" id="glU-43-K9U"/>
                 <constraint firstItem="xVg-wV-axv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="mQf-n2-X61"/>
             </constraints>
+            <point key="canvasLocation" x="166" y="342"/>
         </view>
     </objects>
     <resources>
